# birb

./: .gitignore  LICENSE.md  README.md  ROADMAP.md
birb-backend/: HOWTORUN.md
birb-backend/birb/: Cargo.toml  HOWTORUN.md
birb-backend/birb-common/: Cargo.toml
birb-backend/birb-common/src/: error.rs
birb-backend/birb-macros/: Cargo.toml
birb-backend/birb-macros/src/: lib.rs
birb-backend/birb/sql/: db.sql  tables.sql
birb-backend/birb/src/: main.rs
birb-backend/birb/src/crypto/: hash.rs
birb-backend/birb/src/database/: mod.rs  table.rs
birb-backend/birb/src/database/databases/: connection.rs  error.rs  mod.rs
birb-backend/birb/src/database/databases/authschema/: data.rs  mod.rs  schema.rs
birb-backend/birb/src/database/databases/authschema/tables/: mod.rs
birb-backend/birb/src/database/databases/authschema/tables/admins/: adminstable.rs  data.rs  mod.rs
birb-backend/birb/src/database/databases/blogschema/: mod.rs  schema.rs
birb-backend/birb/src/database/databases/blogschema/tables/: mod.rs
birb-backend/birb/src/database/databases/blogschema/tables/poststable/: poststable.rs
birb-backend/birb/src/datastore/: cache.rs  id.rs  mod.rs  ttl.rs
birb-backend/birb/src/server/: error.rs  server.rs
birb-backend/birb/src/server/service/: mod.rs  service.rs
birb-backend/birb/src/server/service/services/: mod.rs
birb-backend/birb/src/server/service/services/blogservice/: blogservice.rs  data.rs  error.rs  mod.rs
