[package]
name = "birb"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "net",
] }
tower = "0.5.2"
tower-http = { version = "0.5", features = ["cors"] }
birb-common = { path="../birb-common" }
birb-macros = { path="../birb-macros" }
